kubernetes/console/01-01-deployment-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: console-master
  namespace: console
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: console
        proc: webserver
        k8s-app: console-master-webserver
        lang: php
        branch: master
    spec:
      containers:
      - name: console-master
        image: registry.clickyab.ae/clickyab/console:master.3447
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9003
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9003
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 1
        command: [ "/bin/herokuish", "procfile","start", "web"]
        ports:
        - name: master-web
          containerPort: 9003
        volumeMounts:
        - name: statics
          mountPath: /app/public/static
      volumes:
      - name: statics
        cephfs:
          monitors:
            - 192.168.10.1:6789
            - 192.168.10.6:6789
          user: admin
          secretRef:
            name: ceph-secret
          path: "/legacy/statics"
