kubernetes/console/05-00-deployment-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: console
    branch: deploy
    k8s-app: console-deploy-webserver
    lang: php
    proc: webserver
  name: console-deploy
  namespace: console
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: console
        branch: deploy
        k8s-app: console-deploy-webserver
        lang: php
        proc: webserver
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - command:
        - /bin/herokuish
        - procfile
        - start
        - web
        image: registry.clickyab.ae/clickyab/console:deploy.3475
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: console-deploy
        ports:
        - containerPort: 9000
          name: deploy-web
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 700Mi
          requests:
            memory: 200Mi
        volumeMounts:
        - mountPath: /app/public/static
          name: statics
      terminationGracePeriodSeconds: 30
      volumes:
      - cephfs:
          monitors:
          - 192.168.10.1:6789
          - 192.168.10.6:6789
          - 192.168.10.11:6789
          path: /legacy/statics
          secretRef:
            name: ceph-secret
          user: admin
        name: statics
