kubernetes/console/05-02-deployment-console-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: console
    branch: master
    k8s-app: console-master-webserver
    lang: php
    proc: webserver
  name: console-master
  namespace: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
      branch: master
      k8s-app: console-master-webserver
      lang: php
      proc: webserver
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: console
        branch: master
        k8s-app: console-master-webserver
        lang: php
        proc: webserver
    spec:
      containers:
      - command:
        - /bin/herokuish
        - procfile
        - start
        - web
        image: registry.clickyab.ae/clickyab/console:master.3606
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: console-master
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 80
          name: master-web
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 700Mi
          requests:
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/public/static
          name: statics
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - cephfs:
          monitors:
          - 192.168.10.1:6789
          - 192.168.10.6:6789
          - 192.168.10.11:6789
          path: /legacy/statics
          secretRef:
            name: ceph-secret
          user: admin
        name: statics
