kubernetes/console/02-01-service-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-service
  namespace: console
  labels:
    k8s-app: master-web-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "ConsoleMasterService"
spec:
  selector:
    k8s-app: console-master-webserver
  ports:
  - name: mster
    port: 9003
    protocol: TCP
