kubernetes/console/02-02-service-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-service
  namespace: console
  labels:
    k8s-app: deploy-web-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "ConsoleDeployService"
spec:
  selector:
    k8s-app: console-deploy-webserver
  ports:
  - name: deploy
    port: 9004
    protocol: TCP
