kubernetes/console/06-00-service-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-service
  namespace: console
  labels:
    k8s-app: master-web-service
spec:
  selector:
    k8s-app: console-master-webserver
  ports:
  - name: mster
    port: 9000
    protocol: TCP
