kubernetes/console/06-01-service-statics.yaml
apiVersion: v1
kind: Service
metadata:
  name: statics-webserver
  namespace: console
  labels:
    k8s-app: statics
spec:
  selector:
    k8s-app: statics-webserver
  ports:
  - name: deploy
    port: 9000
    targetPort: 80
    protocol: TCP
