kubernetes/console/06-02-service-deploy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-service
  namespace: console
  labels:
    k8s-app: deploy-web-service
spec:
  selector:
    k8s-app: console-deploy-webserver
  ports:
  - name: deploy
    port: 9000
    protocol: TCP
