kubernetes/console/03-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: master-service
  namespace: console
  labels:
    k8s-app: master-web-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "ConsoleMasterService"
spec:
  selector:
    k8s-app: console-master-webserver
  ports:
  - name: mster
    port: 9003
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: deploy-service
  namespace: console
  labels:
    k8s-app: deploy-web-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "ConsoleDeployService"
spec:
  selector:
    k8s-app: console-deploy-webserver
  ports:
  - name: deploy
    port: 9004
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console-ingress
  namespace: console
spec:
  rules:
  - host: dev.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: master-service
          servicePort: 9003
  - host: console.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: deploy-service
          servicePort: 9004
