kubernetes/console/07-00-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console-ingress
  namespace: console
  annotations:
    ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
  - host: dev.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: master-service
          servicePort: 9000
