kubernetes/console/07-01-ingress-console.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console
  namespace: console
  annotations:
    ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
  - host: console.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: deploy-service
          servicePort: 9000
