kubernetes/console/07-02-ingress-static.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console-ingress
  namespace: console
  annotations:
    ingress.kubernetes.io/proxy-body-size: 8m
    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: static.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: statics-webserver
          servicePort: 9000
